backend/kubernetes/service.yaml
# Express API Service
apiVersion: v1
kind: Service
metadata:
  name: express-api
spec:
  selector:
    app: express-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
# Nginx Service
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer # The service is exposed externally
  selector:
    app: nginx # Selects pods labeled with 'app: nginx'
  ports:
    - protocol: TCP
      port: 8081 # Exposes port 8081 on the Service
      targetPort: 8081 # Forwards traffic to po rt 8081 on the container

---
# PostgreSQL Service
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---
# pgAdmin Service
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
  type: ClusterIP

---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP

---
# Grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP

---
# Prometheus Service
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP

---
# Service Go
apiVersion: v1
kind: Service
metadata:
  name: db-backup-go-service
spec:
  selector:
    app: db-backup-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8181
  type: ClusterIP

---
# Service Redis
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP

---
# Jenkins Service
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
